[project]
name = "pybool-ir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "appdirs>=1.4.4",
    "collection>=0.1.6",
    "dataclasses-json>=0.6.7",
    "flatdict>=4.0.1",
    "fnvhash>=0.2.1",
    "furo>=2024.8.6",
    "ir-datasets>=0.5.11",
    "ir-measures>=0.3.7",
    "jcc>=3.15",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "lucene",
    "lupyne>=3.3",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "parsedatetime>=2.6",
    "progressbar2>=4.5.0",
    "pyparsing>=3.2.3",
    "pyserini>=1.1.0",
    "sentence-transformers>=5.0.0",
    "snakeviz>=2.2.2",
    "sphinx>=8.1.3",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "trectools>=0.0.50",
    "twine>=6.1.0",
    "wget>=3.2",
]

[dependency-groups]
dev = [
    "pybool-ir",
]

[tool.uv.sources]
pybool-ir = { workspace = true }
lucene = { path = "pylucene/dist/lucene-9.12.0-cp312-cp312-macosx_11_0_arm64.whl" }
