[metadata]
name = hyperbool
version = 0.0.4

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src
setup_requires =
    setuptools_scm
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hyperbool = hyperbool.cli:cli

[bdist_wheel]
universal = 1